welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:8: error: type mismatch;
 found   : Unit
 required: Boolean
    	chemin = true;
               ^SlugTracking:10: error: type mismatch;
 found   : Unit
 required: Boolean
    chemin = false;
           ^