welcome.lessons.welcome.methods.slug.SlugTracking.scala.code
def isFacingTrail():Boolean = {
    var chemin:Boolean = false
    if (!estFaceMur()) {
    	avance();
    }
    if ((getCouleurSol()) == Color.GREEN) {
    	chemin = true;
    } else { recule();
    chemin = false;
    }
}        



